# fea_thermal_solver

./: CMakeLists.txt  README.md  cubit_mesh_writer.py  elements.cpp  elements.h  math_utilities.cpp  math_utilities.h  mesh_reader.cpp  stiffnessMatrix.cpp  stiffnessMatrix.h
include/: elements.h  math_utilities.h  mesh.h  stiffnessMatrix.h
src/: elements.cpp  math_utilities.cpp  mesh.cpp  stiffnessMatrix.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrixTest  matrix_test.cpp  mesh.mat  plate  plate.cpp  plate_validation_data.csv  plotter.m  points.mat  slab  slab.cpp  slab2  slab2.cpp  slab3  slab3.cpp  solution.mat  stiff  stiffness_test.cpp
